<?xml version="1.0" encoding="utf-8"?>
<layout>

  <data>
    <import type="android.view.View" />
    <variable
        name="viewmodel"
        type="org.openyolo.demoapp.passwordlogin.MainViewModel" />
  </data>

  <android.support.design.widget.CoordinatorLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/contentFrame"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".LoginActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

      <ImageView
          android:layout_width="128dp"
          android:layout_height="128dp"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/openyolo_logo"
          android:contentDescription="@string/openyolo_logo_contentDescription"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="8dp"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"
          android:text="@string/signed_in_prompt"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@{viewmodel.displayPicture}"
            android:contentDescription="@string/user_profile_picture"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:text="@{viewmodel.displayName}"/>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:text="@{viewmodel.email}"/>
        </LinearLayout>

      </LinearLayout>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="16dp"
          android:onClick="@{viewmodel::onSignOutClicked}"
          android:text="@string/sign_out_label"
          style="@style/Widget.AppCompat.Button.Colored" />

    </LinearLayout>
  </android.support.design.widget.CoordinatorLayout>
</layout>